FlightPath 5.x Changelog
========================

2018-03-05
  Added a new hook, hook_courselist_find_match_allow_course.  This allows modules too hook in just before a "match" is found by _CourseList's match methods,
  to determine if it should really keep the course or skip it.  This was introduced to counter a bug.  Special thanks to Logan Buth for the concept.
  
  Added extra code to _Course::name_equals, to call load_descriptive_data if subject_id is not populated.    


2018-02-27
  Fixed bug where selecting a track for a degree which already had a | in it would have failed.
  
  Fixed bug for non-dynamic degrees and degree option (track) selection.  It now uses the first "editable"
  degree found for a student, if the primary non-editable degree is non-dynamic.
  
  Added function get_degree_allow_dynamic() to _DatabaseHandler.php.
  

2017-12-5
  To fix an issue where groups with branches were not respecting the grade sort order, I added
  a new method to _GroupList: sort_best_grade_first_by_student_grades().  This helps sort branches
  based on grades the student has earned.


2017-11-30
  Fixed bug where courses with inf. repeats were not respecting minimum grades.
  
  Fixed another bug with inf. repeats, where substitutions were interfering with inf. course logic.
  

2017-11-26
  Fixed missing child group issue, caused by previous work (special thanks to Logan Bluth)
  

2017-11-15
  Introduced concept of "infinite repeats" in groups, for courses with an excessive
  amount of repeats allowed.  This greaty helps speed up FlightPath's group logic when
  loading a student.
  
  Added various function caches, and re-wrote some queries, in an effort to speed
  load time for FlightPath (special thanks to Logan Buth)
  

2017-11-09
  Added extra filtering to the filter_markup() function, which would repair
  any mismatched or faulty HTML tags.  This can happen when people paste incomplete HTML
  from Word or an email into a Comment.
  

2017-11-07